# gst-plugins-rdk

./: Makefile.am  configure.ac
.github/: CODEOWNERS
httpsrc/: Makefile.am  gsthttpsrc.c
